--- a/index.html
+++ b/index.html
@@ -203,6 +203,20 @@
             <span class="arrow">→</span>
           </a>
         </li>
+        <li class="menu-item">
+          <a href="CachDungMarkdown/index.html" class="menu-link">
+            <span class="icon">📝</span>
+            <span class="text">Cách dùng Markdown</span>
+            <span class="arrow">→</span>
+          </a>
+        </li>
+        <li class="menu-item">
+          <a href="AI-FIRST-DEMO1/index.html" class="menu-link">
+            <span class="icon">🤖</span>
+            <span class="text">Mô hình phần mềm AI-First</span>
+            <span class="arrow">→</span>
+          </a>
+        </li>
         <!-- Thêm các trang mới ở đây -->
         <!--
         <li class="menu-item">
