--- a/index.html
+++ b/index.html
@@ -217,6 +217,13 @@
             <span class="arrow">→</span>
           </a>
         </li>
+        <li class="menu-item">
+          <a href="chat_luong_phan_mem/index.html" class="menu-link">
+            <span class="icon">✅</span>
+            <span class="text">Kiểm soát chất lượng phần mềm</span>
+            <span class="arrow">→</span>
+          </a>
+        </li>
         <!-- Thêm các trang mới ở đây -->
         <!--
         <li class="menu-item">
