--- a/kien-truc/phong-cach-kien-truc.html
+++ b/kien-truc/phong-cach-kien-truc.html
@@ -33,10 +33,11 @@
             background: white;
             border-radius: 20px;
             box-shadow: 0 20px 60px rgba(0,0,0,0.3);
-            padding: 60px;
+            padding: 40px;
             display: none;
             flex-direction: column;
             position: relative;
+            overflow-y: auto;
         }
 
         .slide.active {
@@ -53,17 +54,17 @@
         }
 
         h1 {
-            font-size: 48px;
+            font-size: 42px;
             color: #2d3748;
-            margin-bottom: 40px;
+            margin-bottom: 30px;
             text-align: center;
             line-height: 1.3;
         }
 
         h2 {
-            font-size: 36px;
+            font-size: 32px;
             color: #4a5568;
-            margin-bottom: 50px;
+            margin-bottom: 30px;
             text-align: center;
         }
 
@@ -82,13 +83,13 @@
 
         .arch-diagram {
             width: 100%;
-            height: 280px;
-            margin-bottom: 20px;
+            height: 200px;
+            margin-bottom: 15px;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            gap: 15px;
+            gap: 10px;
         }
 
         .box {
@@ -189,7 +190,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            margin: 40px 0;
+            margin: 20px 0;
             position: relative;
         }
 
@@ -206,20 +207,20 @@
 
         .timeline-item {
             background: white;
-            padding: 25px;
-            border-radius: 15px;
-            box-shadow: 0 6px 20px rgba(0,0,0,0.15);
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.15);
             z-index: 1;
             flex: 1;
-            margin: 0 10px;
-            border: 3px solid #667eea;
+            margin: 0 8px;
+            border: 2px solid #667eea;
         }
 
         .timeline-year {
-            font-size: 24px;
+            font-size: 18px;
             font-weight: 700;
             color: #667eea;
-            margin-bottom: 10px;
+            margin-bottom: 8px;
         }
 
         .timeline-text {
@@ -231,22 +232,21 @@
         .myth-box {
             background: linear-gradient(135deg, #fc8181 0%, #f56565 100%);
             color: white;
-            padding: 40px;
-            border-radius: 20px;
+            padding: 25px;
+            border-radius: 15px;
             text-align: center;
-            margin: 30px 0;
-            box-shadow: 0 10px 30px rgba(245, 101, 101, 0.3);
+            margin: 20px 0;
+            box-shadow: 0 8px 20px rgba(245, 101, 101, 0.3);
         }
 
         .myth-icon {
-            font-size: 80px;
-            margin-bottom: 20px;
+            font-size: 50px;
+            margin-bottom: 10px;
         }
 
         .myth-text {
-            font-size: 32px;
+            font-size: 24px;
             font-weight: 700;
-            margin-bottom: 15px;
         }
 
         .reality-box {
@@ -265,7 +265,7 @@
         .problem-container {
             display: flex;
             flex-direction: column;
-            gap: 30px;
+            gap: 15px;
             flex: 1;
         }
 
@@ -273,7 +273,7 @@
             background: #fff5f5;
             border: 3px dashed #fc8181;
             border-radius: 15px;
-            padding: 30px;
+            padding: 20px;
             text-align: center;
         }
 
@@ -323,15 +323,15 @@
 
         .comparison-table {
             display: flex;
-            gap: 30px;
-            margin: 30px 0;
+            gap: 20px;
+            margin: 20px 0;
         }
 
         .comparison-col {
             flex: 1;
-            border-radius: 15px;
-            padding: 30px;
-            box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+            border-radius: 12px;
+            padding: 20px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
         }
 
         .bad {
@@ -360,32 +360,32 @@
         .conclusion-box {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
-            padding: 50px;
-            border-radius: 20px;
+            padding: 30px;
+            border-radius: 15px;
             text-align: center;
-            margin: 40px 0;
-            box-shadow: 0 15px 40px rgba(102, 126, 234, 0.4);
+            margin: 20px 0;
+            box-shadow: 0 10px 30px rgba(102, 126, 234, 0.4);
         }
 
         .conclusion-icon {
-            font-size: 100px;
-            margin-bottom: 30px;
+            font-size: 60px;
+            margin-bottom: 15px;
         }
 
         .conclusion-title {
-            font-size: 42px;
+            font-size: 28px;
             font-weight: 700;
-            margin-bottom: 25px;
+            margin-bottom: 15px;
         }
 
         .conclusion-text {
-            font-size: 24px;
+            font-size: 20px;
             line-height: 1.8;
         }
 
         .controls {
             position: fixed;
-            bottom: 30px;
+            bottom: 20px;
             left: 50%;
             transform: translateX(-50%);
             display: flex;
@@ -456,24 +456,14 @@
             transition: max-height 0.3s ease-out;
             background: #f7fafc;
             padding: 0 20px;
-        }
-
-        .notes-content.open {
-            max-height: 200px;
-            padding: 20px;
-        }
-
-        .notes-title {
-            font-size: 16px;
-            font-weight: 700;
-            color: #667eea;
-            margin-bottom: 10px;
-        }
-
-        .notes-content {
             font-size: 14px;
             color: #4a5568;
             line-height: 1.8;
+        }
+
+        .notes-content.open {
+            max-height: 300px;
+            padding: 15px 20px;
         }
 
         .highlight {
@@ -623,7 +613,7 @@
             <div class="slide-number">4/7</div>
             <h2>Hiểu lầm phổ biến</h2>
             <div class="myth-box">
-                <div class="">🚫</div>
+                <div style="font-size: 28px; font-weight: 700; margin-bottom: 0px; color: #2d3748;">🚫</div>
                 <div class="myth-text">Microservices = Thay thế hoàn toàn Monolith</div>
             </div>
             <div class="reality-box">
@@ -749,7 +739,7 @@
         <!-- Slide 7: Conclusion -->
         <div class="slide">
             <div class="slide-number">7/7</div>
-            <h2>Kết luận</h2>
+            <h3>Kết luận</h3>
             <div class="conclusion-box">
                 <div class="conclusion-icon">🎯</div>
                 <div class="conclusion-title">Kiến trúc sai → Đầu tư sai</div>
