--- a/kien-truc/phong-cach-kien-truc.html
+++ b/kien-truc/phong-cach-kien-truc.html
@@ -757,8 +757,8 @@
                     <div style="font-size: 16px; color: #22543d; line-height: 1.8;">
                         • Đánh giá nhu cầu thực tế<br>
                         • Bắt đầu đơn giản (Monolith)<br>
-                        • Chuyển Microservices khi CẦN<br>
-                        • Đồng bộ phần mềm + phần cứng
+                        • Chuyển Microservices chỉ cho những tính năng cần tính chất: phát triển độc lập, triển khai độc lập, mở rộng độc lập, chịu lỗi độc lập<br>
+                        • Đầu tư đồng bộ phần mềm và phần cứng
                     </div>
                 </div>
                 <div style="flex: 1; background: #fff5f5; padding: 25px; border-radius: 12px; border: 3px solid #fc8181;">
