--- a/kien-truc/phong-cach-kien-truc.html
+++ b/kien-truc/phong-cach-kien-truc.html
@@ -764,9 +764,9 @@
                 <div style="flex: 1; background: #fff5f5; padding: 25px; border-radius: 12px; border: 3px solid #fc8181;">
                     <div style="font-size: 22px; font-weight: 700; color: #742a2a; margin-bottom: 15px;">❌ Tránh:</div>
                     <div style="font-size: 16px; color: #742a2a; line-height: 1.8;">
-                        • Microservices vì "trendy"<br>
+                        • Microservices vì "xu hướng thời thược"<br>
                         • Tách service cho mọi thứ<br>
-                        • Phần mềm Micro, cứng Mono<br>
+                        • Phần mềm Micro, cứng Mono (phần mềm một nẻo, phầm cứng một nẻo)<br>
                         • Distributed Monolith
                     </div>
                 </div>
