--- a/kien-truc/phong-cach-kien-truc.html
+++ b/kien-truc/phong-cach-kien-truc.html
@@ -839,7 +839,7 @@
             </div>
             <div style="background: #e6fffa; padding: 20px; border-radius: 12px; border-left: 5px solid #38b2ac; margin-top: 20px;">
                 <div style="font-size: 18px; color: #234e52; line-height: 1.8;">
-                    <strong>💡 Nguyên tắc:</strong> Chỉ tách MICROSERVICE khi cần: phát triển độc lập, triển khai độc lập, mở rộng độc lập, chịu lỗi độc lập<br>
+                    <strong>💡 Nguyên tắc:</strong> Chỉ tách MICROSERVICE nào cần: phát triển độc lập, triển khai độc lập, mở rộng độc lập, chịu lỗi độc lập<br>
                     <strong>✅ Lợi ích:</strong> Đơn giản cho service nhẹ, mạnh cho service nặng, tối ưu chi phí
                 </div>
             </div>
