--- a/index.html
+++ b/index.html
@@ -224,6 +224,13 @@
             <span class="arrow">→</span>
           </a>
         </li>
+        <li class="menu-item">
+          <a href="kien-truc/phong-cach-kien-truc.html" class="menu-link">
+            <span class="icon">🏗️</span>
+            <span class="text">Phong cách kiến trúc phần mềm</span>
+            <span class="arrow">→</span>
+          </a>
+        </li>
         <!-- Thêm các trang mới ở đây -->
         <!--
         <li class="menu-item">
